--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>project</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="fonts/fonts.css">  
   <link rel="stylesheet" href="fancybox/jquery.fancybox.css">
